--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 3em 0 1em 0;
+    margin: 2.5em 0 1em 0;
 }
 
 button{
@@ -56,7 +56,12 @@ button{
 
 .song-name{
     font-size: 1.5em;
-    font-weight: bold;
+    font-weight: bolder;
+}
+
+.band-name{
+    margin-top: 2px;
+    font-size: 0.9em;
 }
 
 
@@ -67,13 +72,41 @@ button{
 .progress-bar{
     background-color: rgb(139,153,156);
     height: 3px;
-    margin-bottom: 1em;
     border-radius: 15px;
 }
 
 .current-progress{
+    --progress: 0%;
     background-color: white;
     height: inherit;
-    width: 50%;
+    width: var(--progress);
     border-radius: inherit;
+}
+
+.progress-container{
+    padding-top: 1em;
+    cursor: pointer;
+
+}
+
+.button-active{
+    animation: byColor 0.2s ease forwards;
+   
+}
+
+@keyframes byColor {
+    0%{
+        scale: 0.9;
+    }
+    100% {
+        scale: 1;
+        color: rgb(82, 202, 82);
+    }
+}
+
+#time-box {
+    font-size: smaller;
+    margin-top: 0.5em;
+    display: flex;
+    justify-content: space-between;
 }
